refactor: Adjust code styles and configs
