# src/core/entities/expense.go
@@ -8,14 +8,14 @@ import (
 )
 
 type Expense struct {
-    ID          int64     	`json:"id"`
-    Category    string    	`json:"category"`
-    Type        int       	`json:"type"`
-    Description string    	`json:"description"`
-    Amount      float64   	 `json:"amount"`
-    Date        time.Time   `json:"date"`
-    CreatedAt   time.Time   `json:"createdAt"`
-    DeletedAt   *time.Time  `json:"deletedAt"`
+	ID          int64      `json:"id"`
+	Category    string     `json:"category"`
+	Type        int        `json:"type"`
+	Description string     `json:"description"`
+	Amount      float64    `json:"amount"`
+	Date        time.Time  `json:"date"`
+	CreatedAt   time.Time  `json:"createdAt"`
+	DeletedAt   *time.Time `json:"deletedAt"`
 }
 
 type ExpenseService interface {
@@ -29,12 +29,12 @@ type ExpenseUseCases interface {
 	Create(input *ports.ExpenseInput) (*Expense, error)
 	Update(id int64, input *ports.ExpenseInput) (*Expense, error)
 	Delete(id int64) (*Expense, error)
-    GetOneOrMany(skip int, take int, id ...int64) ([]Expense, error)
+	GetOneOrMany(skip int, take int, id ...int64) ([]Expense, error)
 }
 
 type ExpenseRepository interface {
 	Create(input *ports.ExpenseInput) (*Expense, error)
 	Update(id int64, input *ports.ExpenseInput) (*Expense, error)
 	Delete(id int64) (*Expense, error)
-    GetOneOrMany(skip int, take int, id ...int64) ([]Expense, error)
+	GetOneOrMany(skip int, take int, id ...int64) ([]Expense, error)
 }
